--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,10 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+env:
+  - BASE_URL=${{BASE_URL}}
+  - BASE_API_URL=${{BASE_API_URL}}
+
 jobs:
   test:
     timeout-minutes: 60
