--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: main 
   pull_request:
-    branches: [ main, master ]
+    branches: main 
 env:
   BASE_URL: ${{ vars.BASE_URL }}
   BASE_API_URL: ${{ vars.BASE_API_URL }}
